[package]

name = "astar"
version = "0.2.0"
authors = ["red75prime <red75prim@gmail.com>"]

repository = "https://github.com/red75prime/RustAStar"
keywords = ["astar", "search", "path", "pathfinding"]
license = "MIT"
description = "Implementation of A* search algorithm"

[dependencies]
typed-arena = "1.1"
